Update dependencies for Streamlit Cloud deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-streamlit==1.32.0
-pytube==15.0.0
-openai-whisper==20231117
-torch==2.2.0
-numpy==1.26.4
-python-dotenv==1.0.1
-requests==2.31.0
-urllib3==2.0.7
-charset-normalizer==3.3.2
+streamlit
+pytube
+openai-whisper
+torch
+numpy<2.0.0
+python-dotenv
+requests
+urllib3
+charset-normalizer
+setuptools
